syntax = "proto3";

package blockscout.golemBaseIndexer.v1;

option go_package = "github.com/Golem-Base/blockscout-rs-neti/golem-base-indexer";


service GolemBaseIndexerService {
  rpc GetEntity(GetEntityRequest) returns (Entity);
  rpc GetOperation(GetOperationRequest) returns (Operation);
  
  rpc ListEntities(ListEntitiesRequest) returns (ListEntitiesResponse);
  rpc ListOperations(ListOperationsRequest) returns (ListOperationsResponse);
}

message GetEntityRequest {
  string key = 1;
}

message GetOperationRequest {
  string tx_hash = 1;
  uint64 index = 2;
}

message ListEntitiesRequest {
  // FIXME add filtering & paging options
}

message ListEntitiesResponse {
  repeated Entity items = 1;
  // FIXME add pagination metadata
}

message ListOperationsRequest {
  // FIXME add filtering & paging options
}

message ListOperationsResponse {
  repeated Operation items = 1;
  // FIXME add pagination metadata
}

enum EntityStatus {
  Active = 0;
  Deleted = 1;
  Expired = 2;
}

message Entity {
  string key = 1;
  optional string data = 2; // FIXME some raw data type maybe?
  EntityStatus status = 3;

  optional string created_at_tx_hash = 4;
  string last_updated_at_tx_hash = 5;
  uint64 expires_at_block_number = 6;
}

enum OperationType {
  Create = 0;
  Update = 1;
  Delete = 2;
  Extend = 3;
}

message Operation {
  string entity_key = 1;
  string sender = 2;
  OperationType operation = 3;
  optional string data = 4; // FIXME some raw data type maybe?
  optional uint64 btl = 5;
  string block_hash = 6;
  string transaction_Hash = 7;
  uint64 index = 8;
}
